// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Web components with empty store App renders correctly 1`] = `
<div
  className="sc-EHOje bgIqlJ"
>
  <div
    className="sc-bZQynM dSxaLX"
  >
    App is loading...
  </div>
</div>
`;

exports[`Web components with empty store Button renders correctly 1`] = `
<button
  className="sc-bwzfXH fhVPAQ"
/>
`;

exports[`Web components with empty store InfoBox (danger) with text renders correctly 1`] = `
<div
  className="sc-htpNat fRmjjz"
>
  <span
    aria-label="stop"
    role="img"
  >
    ✋
  </span>
   
  Text
</div>
`;

exports[`Web components with empty store InfoBox with text renders correctly 1`] = `
<div
  className="sc-htpNat kGGqzs"
>
  <span
    aria-label="points up"
    role="img"
  >
    ☝
  </span>
   
  Text
</div>
`;

exports[`Web components with mocked store (fetched data) App renders correctly 1`] = `
<div
  className="sc-EHOje bgIqlJ"
>
  <div />
</div>
`;

exports[`Web components with mocked store (fetched data) Button renders correctly 1`] = `
<button
  className="sc-bwzfXH fhVPAQ"
/>
`;

exports[`Web components with mocked store (fetched data) InfoBox (danger) with text renders correctly 1`] = `
<div
  className="sc-htpNat fRmjjz"
>
  <span
    aria-label="stop"
    role="img"
  >
    ✋
  </span>
   
  Text
</div>
`;

exports[`Web components with mocked store (fetched data) InfoBox with text renders correctly 1`] = `
<div
  className="sc-htpNat kGGqzs"
>
  <span
    aria-label="points up"
    role="img"
  >
    ☝
  </span>
   
  Text
</div>
`;
